kubernetes/django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-admin
  labels:
    app.kubernetes.io/name: django-admin
spec:
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: olberd/django-k8s
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: django-admin-service
  labels:
    env: prod
    owner: olberd
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
