kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-admin-service
  labels:
    env: prod
    owner: olberd
spec:
  selector:
    app: django-app
  ports:
    - name: django-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
